--- a/index.html
+++ b/index.html
@@ -2,26 +2,31 @@
 <html>
   <head>
     <title>Pizza Legends</title>
+
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ribeye&display=swap" rel="stylesheet">
+    <!-- Overworld styles -->
     <link href="/styles/global.css" type="text/css" rel="stylesheet">
     <link href="/styles/TextMessage.css" type="text/css" rel="stylesheet">
     <link href="/styles/SceneTransition.css" type="text/css" rel="stylesheet">
     <link href="/styles/KeyboardMenu.css" type="text/css" rel="stylesheet">
     <link href="/styles/Hud.css" type="text/css" rel="stylesheet">
     <link href="/styles/TitleScreen.css" type="text/css" rel="stylesheet">
-
-    <!--Battle-->
-     <link href="/styles/Battle.css" type="text/css" rel="stylesheet">
-     <link href="/styles/Combatant.css" type="text/css" rel="stylesheet">
-     <link href="/styles/SubmissionMenu.css" type="text/css" rel="stylesheet">
-     <link href="/styles/Team.css" type="text/css" rel="stylesheet">
-     <link href="/styles/Menus.css" type="text/css" rel="stylesheet">
-
-
+    <!-- Battle css -->
+    <link href="/styles/Battle.css" type="text/css" rel="stylesheet">
+    <link href="/styles/Combatant.css" type="text/css" rel="stylesheet">
+    <link href="/styles/SubmissionMenu.css" type="text/css" rel="stylesheet">
+    <link href="/styles/Team.css" type="text/css" rel="stylesheet">
+    <link href="/styles/Menus.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div class="game-container">
       <canvas class="game-canvas" width="352" height="198"></canvas>
     </div>
+    <p class="how-to-play">Use Arrow Keys to move. Enter to prompt/talk.</p>
 
     <!-- Content -->
     <script src="/Content/pizzas.js"></script>
@@ -52,7 +57,7 @@
     <script src="/Progress.js"></script>
     <script src="/TitleScreen.js"></script>
 
-    <!--Battle-->
+    <!-- Battle -->
     <script src="/Battle/Battle.js"></script>
     <script src="/Battle/Combatant.js"></script>
     <script src="/Battle/Team.js"></script>
@@ -61,7 +66,6 @@
     <script src="/Battle/BattleEvent.js"></script>
     <script src="/Battle/TurnCycle.js"></script>
     <script src="/Battle/BattleAnimations.js"></script>
-
 
     <script src="/init.js"></script>
 
